--- a/index.html
+++ b/index.html
@@ -125,6 +125,13 @@ font-family: Arial, sans-serif;
       </div>
       
     </div>
+  <div class="container">
+      <audio id="background-audio" src="./Dream A Little Dream Of Me(_v8I5vDewcZo_).m4a"></audio>
+      <div id="controls">
+      <button id="play-button">Müzüği Çal</button>
+    <button id="pause-button">Müzüği Durdur</button>
+       </div>
+    </div>
 
   
 
