--- a/index.html
+++ b/index.html
@@ -26,6 +26,23 @@ background-position: center;
 margin: 0;
 font-family: Arial, sans-serif;
 }
+       #play-button,
+  #pause-button {
+    padding: 10px 20px;
+    margin: 0 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #70077997;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    
+  }
+
+  #play-button:hover,
+  #pause-button:hover {
+    background-color: #360140;
+  }
       </style>
 
 
