--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@ font-family: Arial, sans-serif;
   <div class="container">
       <audio id="background-audio" src="./Dream A Little Dream Of Me(_v8I5vDewcZo_).m4a"></audio>
       <div id="controls">
-      <button id="play-button">Müzüği Çal</button>
-    <button id="pause-button">Müzüği Durdur</button>
+      <button id="play-button">Müziği Çal</button>
+    <button id="pause-button">Müziği Durdur</button>
        </div>
     </div>
 
