--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ font-family: Arial, sans-serif;
         </a>
       </div>
       <div class="menu-toggle">
-        <input type="checkbox" id="toggle" style="display: none;">
+        <input type="checkbox" id="toggle" style="display: block;">
         <label for="toggle" class="menu-icon">☰</label>
           <ul class="nav-links">
           <li><a href="klasik.html" >KLASİK</a></li>
