--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@ font-family: Arial, sans-serif;
   <footer class="footer">
     <div class="container">
       <span class="text-muted">@2024 Kitap Türleri</span>
-      <button onclick="scrollToTop()" id="scrollTopBtn" title="Go to top">^</button>
+     <button onclick="scrollToTop()" id="scrollTopBtn" title="Go to top">↑</button>
+      <button onclick="scrollToBottom()" id="scrollBottomBtn" title="Go to bottom">↓</button>
     </div>
     
   </footer>
